# hitster

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: FUNDING.yml
.github/workflows/: push_docker.yaml
.sqlx/: query-038fb996bdd32308cd2bfae64144728da26293ad5d61d009bc3dfade34c1007e.json  query-064e7c1f7b490fe1b8e420f9f1c8d6a450eef2450fe65900f7717ef9c5035702.json  query-0a53534556e64cec0e35e3efdfe542d006da79fcab230656f3cbf83bef182adf.json  query-0c5a7f1ba6f1c2504229fe58d9edd58058e3492ad7f2e317eb2c87031e5e2ee9.json  query-11282d1965cad47bd62162a87fa1b90183a2be0526ccace7708b351e4b26f611.json  query-149bcd63734af243c1e42667cf3cea8345c2b27580ab664c124cd0d4e7e8f9aa.json  query-19275cf002f793f51839b3e15e9447601457cd5ad809e96d79793f51f1e3f89f.json  query-1e9a130f77a7d139a7835df477f5c18d0fc8cc24b16145c8a90a2f9a0d1a8cc6.json  query-2db571e2b5accaaf6207ec737c4ca557af5ed6aac7dbb49a3bbf1f0130d37559.json  query-316516f5ac69668926b57e076203b4abf0d03fc44a07968b1b18a12202647a6f.json  query-31cdfb50f6bfed613bce499b10b2f5f2ae44e4344e5367cc33a626ba794c8952.json  query-3975f2715031b82cdaa5f48be86b269f5a2914227d5023f9445cc4cb328ac0fd.json  query-407c00c79f88b9eb4b345268dfe85c6f03dac82c6671ab5da7c60e29f498e728.json  query-4e0f6b1958f7686a3be13a6d9db0382405e5db2d8fb57eaad65aebf333c7f0b3.json  query-50964cbbeffb1feabb6e1bc4cafa74afeaa53444905cfb7b1699c8c2711dc72f.json  query-521c9d77e20458a561a67cbae43d2b3d29c170c65ef3421aa8d298a6becc0686.json  query-5b12d09d8be967af9e3a3a3a44fcd9ff226ee7deef1ae336d87373a77f3f6aa2.json  query-6551f843acfe01b756cc28a8d917ef7d62ee4a5565e08450229f73547e955d5b.json  query-68a13c893c0c59d58c7d19e238c4ac1df5be9dcb9a4da9d26312f749f52d86a2.json  query-6f7791cfb058ef70b8e9a051ec0ee7c121718d668943ba35d006d02eada20e80.json  query-76e53f630fa7f0aed2ba3537638e4d8d8a61143ddd0d74c81d025171fa4f946a.json  query-76fdf39df716db6ef92fabf07fc40f75837c46ee507c00f90c33e24398850224.json  query-7a8e61bd70e0630dc32310b5a60880e2fdb9a57d64932d0f9c17482233500ffe.json  query-7c2c1068eba95d823adeaac6a81638ffe3ba4addc73e45aa4626c4f060937239.json  query-91b5f033afccbc0b1146d683870885a9026846503167b6c2aa7a241ebe39def4.json  query-9c5511255c0bc4f3e2311334b30e5e8a83cc0bca0d2b83d991b3b9792a6f4c32.json  query-a2ac2d7844c14ba731eedf0bc6d389e427a282057b91903a33e892b1c6ff8d7f.json  query-a6707e8c56102ac3d3a0f8fbbf547c2a852235d77e68c3859ff16475381151a2.json  query-aba03f1376517c056d17dcd2d5ffa1f4f4c497cfa0c2d8bd74b7577db9d456a0.json  query-b411442c6dc75d1a3ab4074168716cb29105e9e8518bb3e42414d1b5a840a6c7.json  query-b993c22cd607f7b067b3c9aa90e3d95b0b510347442ea5aeb998753d690e0a65.json  query-bdbecfa7db81e1d5dc3b6bad78c287e130faae63b78815e4f5cae50891efc433.json  query-cb9a92df8907614f440caa8d7d81254b74846424b6e267f462519b5f29bda49c.json  query-d04087e8bd7ab8dc452456bcc08de009b0876235f0d349c68199e3c3224b28a7.json  query-d08992cf2c132fedbed21b94d545e154fa2a7a2a2bf79fd033341d1bb5a6c0f2.json  query-d593d54b220bfe659f8433ec3869e147e6f91d61999516f46a18ddcb0d54dcb2.json  query-dae48ffef8f4a5474844bbbdb38176af42352d4467572ab649d11158f338c0db.json  query-dc332e89959f2a4f79180a7b4fe217c680064090b6468eba800ef6e1c7e3fc46.json  query-eebd2f44a39b0b560f70615bba02dd4fd633d51d4fe7cb23da0005abc2ab349a.json  query-f633d924516c71118fcaa358ee1683681474d71b86e8008cc3964c00587f1032.json  (+2 more)
cli/: Cargo.toml
cli/src/: main.rs  migrate.rs  users.rs
client/: .prettierrc.json  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/sfx/: claim_hit.opus  join_game.opus  leave_game.opus  no_interception.opus  pay_token.opus  play_hit.opus  popup.opus  receive_token.opus  select_slot.opus  slot_unavailable.opus  stop_hit.opus  you_fail.opus  you_lose.opus  you_score.opus  you_win.opus
client/src/: App.tsx  context.ts  contexts.ts  entities.ts  error-page.tsx  error.tsx  events.ts  fetch.ts  focus-anchor.tsx  game.tsx  hit-player.tsx  hooks.ts  i18n.ts  index.css  layout.loader.ts  layout.tsx  lobby.tsx  login.tsx  main.tsx  navigation.tsx  notification-player.tsx  registration.tsx  settings.tsx  sfx-player.tsx  shortcuts.tsx  speech-player.tsx  user-auth.ts  utils.ts
client/src/locale/: de.json  de.yml  en.json  en.yml
client/src/modals/: error.tsx  report-hit-issue.tsx  settings.tsx  shortcuts.tsx  view-packs.tsx  welcome.tsx
client/src/pages/: browser.loader.ts  browser.page.tsx  create-hit.page.tsx  error-page.tsx  game.loader.ts  game.page.tsx  game.tsx  hit.loader.ts  hit.page.tsx  lobby.loader.ts  lobby.page.tsx  lobby.tsx  login.action.ts  login.page.tsx  login.tsx  registration.action.ts  registration.page.tsx  registration.tsx  status.loader.ts  status.page.tsx  welcome.tsx
client/src/pages/browser/: packs.tsx
client/src/pages/game/: add-local-player.tsx  end-screen.tsx  hit-player.tsx  hits-view.tsx  leave-game-question.tsx  settings.tsx  slot-selector.css  slot-selector.tsx  utils.ts
client/src/services/: games.service.tsx  hits.service.ts
client/src/toasts/: ToastsContext.ts  ToastsProvider.tsx  index.ts  types.ts  useToasts.ts
core/: Cargo.toml
core/src/: lib.rs
docker/s6-rc.d/hitster/: run
docker/s6-rc.d/pot-provider/: run
etc/: hits.yml
server/: .env  Cargo.toml  build.rs  rocket.toml
server/etc/: hits.csv
server/migrations/: 20240227170421_add_users.sql  20240417062205_rewrite_users_table.sql  20250728164556_create_hits_tables.sql  20250812163435_insert_permissions_column_to_users_table.sql  20260118095500_create_hit_issues.sql  20260118101000_add_issue_permissions.sql
server/src/: games.rs  hit.rs  hits.rs  main.rs  merge_db.rs  responses.rs  users.rs
server/src/routes/: captcha.rs  games.rs  hits.rs  mod.rs  users.rs
server/src/services/: games.rs  hits.rs  mod.rs  users.rs
