[workspace]
members = [ "cli", "core", "server"]
resolver = "3"
default-members = ["server"]

[workspace.dependencies]
schemars = { version = "0.8.16", features = ["uuid1"]}
serde = { version = "1.0.197", features = ["derive"]}
uuid = { version = "1.8.0", features = ["serde", "v4"], default-features = false }

[profile.release]
lto = true
opt-level = "z"
strip = true
