[workspace]
members = [ "cli", "core", "server"]
resolver = "3"
default-members = ["server"]

[workspace.dependencies]
serde = { version = "1.0.197", features = ["derive"]}
serde_yml = "0.0.12"
time = { version = "0.3.34", features = ["serde", "serde-well-known"]}
uuid = { version = "1.8.0", features = ["serde", "v4"], default-features = false }

[profile.release]
lto = true
opt-level = "z"
strip = true
