[workspace]
members = [ "cli", "core", "server"]
resolver = "3"
default-members = ["server"]

[workspace.dependencies]
argon2 = { version = "0.5.3", features = ["std"]}
bitflags = "2.9.1"
dotenvy = "0.15.7"
multi_key_map = "0.3.0"
natord = "1.0.9"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
serde_yml = "0.0.12"
sqlx = { version = "0.7", default-features = false, features = ["migrate", "macros", "time", "uuid", "sqlite", "runtime-tokio"] }
time = { version = "0.3.34", features = ["serde", "serde-well-known"]}
uuid = { version = "1.8.0", features = ["serde", "v4"], default-features = false }

[profile.release]
lto = true
opt-level = "z"
strip = true
