[package]
name = "hitster-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
hitster_core = { path = "../core" }
regex-lite = { workspace = true }
serde = { workspace = true }
serde_yml = "0.0.12"
terminal-menu = "3.0.0"
uuid = { workspace = true }
