[package]
name = "hitster-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
hitster_core = { path = "../core" }
regex-lite = "0.1.6"
serde = { workspace = true }
serde_yml = { workspace = true }
terminal-menu = "3.0.0"
uuid = { workspace = true }
