[package]
name = "hitster_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
deunicode = "1.6.2"
multi_key_map = { workspace = true }
natord = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simsearch = "0.3.0"
sqlx = { workspace = true }
time = { workspace = true }
unicode-normalization = "0.1.24"
uuid = { workspace = true }
