[package]
name = "hitster-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
native_dl = ["dep:filesize", "dep:rusty_ytdl"]
yt_dl = []
default = ["native_dl"]

[dependencies]
argon2 = "0.5.3"
async-process = "2.4.0"
dotenvy = "0.15.7"
filesize = { version = "0.2.0", optional = true }
hitster_core = { path = "../core" }
itertools = "0.14.0"
multi_key_map = { workspace = true }
parking_lot = { version = "0.12.1"}
petname = {version = "2.0.0-beta.4", default-features = false, features = ["default-rng", "default-words"]}
rand = "0.9.0"
rand_chacha = "0.9.0"
rocket = { version = "0.5.1", features = ["json", "secrets", "uuid"] }
rocket_async_compression = "0.6.0"
rocket_db_pools = { version = "0.2.0", default-features = false, features = ["sqlx_sqlite"] }
rocket_okapi = { version = "0.9", default-features = false, features = ["swagger", "rapidoc", "secrets", "rocket_db_pools"] }
rusty_ytdl = { version = "0.7.0", optional = true }
schemars = { version = "0.8.16", features = ["uuid1"]}
serde = { workspace = true }
serde_json = "1.0.114"
serde_yml = { workspace = true }
sqlx = { version = "0.7", default-features = false, features = ["migrate", "macros", "time", "uuid"] }
time = { workspace = true }
uuid = { workspace = true }
