[package]
name = "hitster-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
native_dl = ["dep:filesize", "dep:rusty_ytdl"]
yt_dl = []
default = ["native_dl"]

[dependencies]
altcha-lib-rs = { version = "0.2.0", features = ["json"]}
argon2 = { workspace = true }
async-process = "2.4.0"
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
dotenvy = { workspace = true }
filesize = { version = "0.2.0", optional = true }
hitster_core = { path = "../core" }
itertools = "0.14.0"
multi_key_map = { workspace = true }
natord = { workspace = true }
parking_lot = { version = "0.12.1"}
petname = {version = "2.0.0-beta.4", default-features = false, features = ["default-rng", "default-words"]}
rand = "0.9.0"
rand_chacha = "0.9.0"
rocket = { version = "0.5.1", features = ["json", "secrets", "uuid"] }
rocket_async_compression = "0.6.0"
rocket_db_pools = { version = "0.2.0", default-features = false, features = ["sqlx_sqlite"] }
rocket_okapi = { version = "0.9", default-features = false, features = ["swagger", "rapidoc", "secrets", "rocket_db_pools"] }
rusty_ytdl = { version = "0.7.0", optional = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
timed_set = "0.0.4"
uuid = { workspace = true }
